# portfolio_project

./: README.md  Stock_Price_Prediction.ipynb  coffeshop project.xlsx  heart_attack.ipynb  retail_store cleaning and EDA.sql  retail_store visualization.ipynb  youtube_video_comments.ipynb
delivery_delays_v1/: README.md  app.py  evaluate.py  load_data.py  preprocess.py  run_all.py  train_model.py
delivery_delays_v1/.streamlit/: config.toml
delivery_delays_v1/model/: delivery_model.pkl
delivery_delays_v1/notebooks/: Delivery_Delays_XGBoost.ipynb  README.md
delivery_delays_v2/: .dockerignore  Dockerfile  README.md  requirements.txt
delivery_delays_v2/delivery_delays_api/: requirements.txt  tox.ini
delivery_delays_v2/delivery_delays_api/app/: api.py  config.py  main.py
delivery_delays_v2/delivery_delays_api/app/schemas/: __init__.py  predict.py
delivery_delays_v2/delivery_delays_api/app/tests/: test_api.py
delivery_delays_v2/delivery_model_package/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
delivery_delays_v2/delivery_model_package/delivery_model/: config.yml  pipeline.py  predict.py  test_.py  train_pipeline.py
delivery_delays_v2/delivery_model_package/delivery_model/config/: core.py
delivery_delays_v2/delivery_model_package/delivery_model/processing/: data_manager.py  expected_features.pkl  preprocessor.py  validation.py
delivery_delays_v2/delivery_model_package/delivery_model/trained_models/: delivery_model_pipeline.pkl  xgb_model.json
