[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delivery_model"
version = "0.1.0"
description = "A reusable ML package for predicting delivery delays"
authors = [
    { name = "Novita Triwidianingsih", email = "novita14vita@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "xgboost",
    "feature-engine",
    "joblib",
    "strictyaml",
    "pydantic>=2.0,<3.0"
]

[project.optional-dependencies]
dev = ["black", "isort", "pytest", "jupyter", "ipykernel"]